--- a/DrumKit/style.css
+++ b/DrumKit/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    background: url(background.png);
+    background: url(background.jpg);
     background-size: cover;
 }
 
